# Noval

./: .gitattributes  .gitignore  AGENTS.md  AGENTS.zh-CN.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  DESIGN.md  DESIGN.zh-CN.md  LICENSE  PHILOSOPHY.md  PHILOSOPHY.zh-CN.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt  settings.example.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture_proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-check.yml  security.yml
assets/brand/: README.md
desktop/: README.md  __init__.py  package-lock.json  package.json  playwright.config.ts  release-version.json  tsconfig.json  tsconfig.main.json  vite.config.ts  vitest.config.ts
desktop/e2e/: desktop.spec.ts
desktop/scripts/: build-sidecar.ps1  clean.mjs  icon.mjs  package.mjs  version.mjs
desktop/sidecar/: __init__.py
docs/: application-api.md  application-api.zh-CN.md  hooks.md  hooks.zh-CN.md
docs/adr/: 0001-application-api-boundary.md  0002-session-isolation-and-concurrency.md  0003-json-contracts-and-live-events.md  0004-principle-guided-thin-harness.md  0005-goal-evidence-completion-contract.md  0006-desktop-consumer-observation-boundary.md  0007-first-party-desktop-host.md  0008-current-session-schema-discovery.md  0009-bidirectional-transcript-pagination.md  0010-runtime-owned-model-configuration.md  README.md
docs/plans/: 2026-07-18-headless-application-api-design.md  2026-07-18-headless-application-api-implementation.md  2026-07-19-principle-guided-thin-harness.md  2026-07-20-goal-evidence-completion-design.md  2026-07-20-goal-evidence-completion.md  2026-07-20-llmignore-discovery.md  2026-07-21-desktop-consumer-readiness-design.md  2026-07-21-desktop-consumer-readiness.md  2026-07-21-desktop-host-design.md  2026-07-21-desktop-preview.md  2026-07-22-desktop-professional-loop.md  README.md  (+10 more)
evals/: README.md  README.zh-CN.md  __init__.py
noval/: __init__.py  __main__.py  agent.py  api.py  application.py  builtins.py  cli.py  client.py  config.py  confinement.py  context.py  discovery.py  executor.py  hooks.py  mcp.py  messages.py  model_config.py  permissions.py  process.py  redaction.py  requests.py  runtime_log.py  session.py  shell.py  skills.py  task.py  tools.py  turn.py  usage.py
tests/: conftest.py  test_agent.py  test_application_api.py  test_application_isolation.py  test_bubblewrap.py  test_builtins.py  test_cli.py  test_client.py  test_config.py  test_confinement.py  test_context.py  test_context_evals.py  test_discovery.py  test_executor.py  test_hooks.py  test_mcp.py  test_messages.py  test_model_config.py  test_permissions.py  test_process.py  test_provider_architecture.py  test_requests.py  test_runtime_log.py  test_session.py  test_shell.py  test_skills.py  test_task.py  test_task_evals.py  test_tools.py  test_usage.py
(+56 files in other folders)
