[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "noval"
version = "0.10.0"
description = "A provider-neutral execution kernel for strong-model, thin-harness agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "kestiny" }]
keywords = ["agent", "llm", "tool-calling", "agent-runtime", "sandbox", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = ["openai>=1.0", "mcp>=1,<2"]

[project.optional-dependencies]
dev = ["pytest>=7"]
anthropic = ["anthropic>=0.40,<1"]

[project.urls]
Homepage = "https://github.com/kestiny18/Noval"
Repository = "https://github.com/kestiny18/Noval"
Issues = "https://github.com/kestiny18/Noval/issues"
Changelog = "https://github.com/kestiny18/Noval/blob/main/CHANGELOG.md"
Philosophy = "https://github.com/kestiny18/Noval/blob/main/PHILOSOPHY.md"
Security = "https://github.com/kestiny18/Noval/security/policy"

[project.scripts]
noval = "noval.cli:run_cli"

[tool.setuptools]
packages = ["noval"]
